# redix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
examples/nodejs/: README.md  basic.js  package-lock.json  package.json
src/: lib.rs  main.rs
src/kv_store/: mod.rs
src/network/: mod.rs  redis.rs
src/persistence/: mod.rs
src/raft/: mod.rs
tests/: cluster_tests.rs
