[package]
name = "redix"
version = "0.1.0"
edition = "2024"
default-run = "redix"

[[bin]]
name = "redix"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = { version = "6.1", features = ["serde"] }
anyhow = "1.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
rustyline = "12.0"
